--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
       
         <div class="card" onclick="openProject('jcoco')" role="button" tabindex="0">
-          <img src="assets/jcoco-allflavorssss.pdf" alt="Jcoco Chocolate Packaging" />
+          <img src="assets/jcoco-allflavorssss.png" alt="Jcoco Chocolate Packaging" />
           <div class="meta">
             <h3>Jcoco Chocolate</h3>
             <p>Packaging • Branding</p>
